drop table "Account";
drop table "Itinerario";
drop table "Opzione";
drop table "Passeggero";
drop table "Volo";
drop table "Aeroporto";
drop table "Biglietto";
drop table "Biglietto_Opzione";
drop table "Dati_Pagamento";
drop table "Storico_Prenotazione";
drop table "Documento";
drop table "Itinerario_Volo";
drop table "Prenotazione_Attiva";
drop package packageEncryptDecryptPassword;
drop procedure reportStorico;
drop trigger TGRSTORICO;
drop index IDXBiglietto_Opzione;
drop index IDXItinerario_Volo;



